Tue Jan 25 15:24:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/ACE-categories.html:
          Updated this document

Tue Jan 25 15:05:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS.h:
          Removed include of os_include/sys/os_fcntl.h, this file doesn't
          exists

Tue Jan 25 14:41:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * examples/IPC_SAP/SPIPE_SAP/producer_msg.cpp:

        Added a necessary includefile which make things compile better
        when ACE_HAS_STREAM_PIPES is defined.

Tue Jan 25 14:15:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * tests/Reference_Counted_Event_Handler_Test.cpp:
        * tests/Reactor_Registration_Test.cpp:

        Tidied up resource management (i.e. close pipes in eventhandler
        destructors) since VxWorks does not automatically release those
        when a dynamically loaded app module is finished.

        * tests/Reactor_Dispatch_Order_Test.cpp:

        Tidied up resource management and fixed handling superfluous output
        event (like OpenBSD and Lynx).

Mon Jan 24 23:10:33 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/Process_Manager.cpp (terminate):
	* ace/Signal.cpp (remove_handler, register_handler):
	* ace/Thread_Manager.cpp (spawn_i):

	  Fixed "control reaches end of non-void function" warnings
	  exhibited by the latest GNU G++ 4.0 CVS snapshot.

Mon Jan 24 17:00:39 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* ace/Makefile.am:

	  Fix thinko in pkgsrc *.pc file generation.

Mon Jan 24 18:24:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * examples/IPC_SAP/SPIPE_SAP/consumer_msg.cpp:
        * examples/IPC_SAP/SPIPE_SAP/producer_msg.cpp:
        * examples/IPC_SAP/SPIPE_SAP/producer_read.cpp:
        * examples/IPC_SAP/SPIPE_SAP/server.cpp:
        * examples/Service_Configurator/IPC-tests/server/Handle_L_SPIPE.i:

        Added a number necessary includefiles which make things compile better