@@ -63,7 +63,7 @@ permits. <P>
 </OL>
 
 <LI> You should also consider entering your bug report into our <A
-HREF="http://deuce.doc.wustl.edu/bugzilla">bug tracking database</A>
+HREF="http://deuce.doc.wustl.edu/bugzilla/index.cgi">bug tracking database</A>
 so that it's archived for future processing.  We try to address these
 bugs as time permits, but may not get to them for a while unless it
 affects our work or the work of our sponsors.  If you'd like an
@@ -94,7 +94,8 @@ can not guarantee responses to all postings. <P>
   can see by checking out the <A
     HREF="http://groups.google.com/groups?q=comp.soft-sys.ace&ie=UTF-8&oe=UTF-8&hl=en">comp.soft-sys.ace</A> newsgroup to see if your posting is visible. <P>
 
-<LI> If it's not visible, please make sure you're <A HREF="ACE-mail.html">subscribed to the mailing
+<LI> If it's not visible, please make sure you're 
+  <A HREF="http://www.cs.wustl.edu/~schmidt/ACE-mail.html">subscribed to the mailing
   list(s)</A> you sent the report to since we have a "members only" posting
   requirement to minimize spam. <P>
 
