@@ -1,3 +1,8 @@
+Tue Jan 25 15:47:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * docs/ACE-bug-process.html:
+          Fixed links
+
 Tue Jan 25 15:24:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * docs/ACE-categories.html:
